[package]
name = "cryptonews"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"  # Добавляем недостающий crate
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"   # Добавляем недостающий crate
dotenv = "0.15"
lru-cache = "0.1"
lazy_static = "1.4"
chrono = "0.4"       # Для работы с датами